--- a/config/nginx/maneyko.conf
+++ b/config/nginx/maneyko.conf
@@ -4,7 +4,7 @@
 # vim: ft=nginx
 
 # crontab entry:
-# 0 0 1 */2 * certbot renew && service nginx reload
+# 0 0 1 */2 * /root/godaddy/certbot-renew-wildcard.sh && service nginx restart
 
 
 # limit_req_zone $binary_remote_addr zone=one:10m rate=200r/m;
@@ -74,7 +74,7 @@ server {
         # fastcgi_pass 127.0.0.1:9000;
     }
 
-    location ~ ^/(rails|react|__monit__)$ {
+    location ~ ^/(rails|react)$ {
         return 301 https://$host$request_uri/;
     }
 
@@ -93,29 +93,4 @@ server {
 
         proxy_pass http://127.0.0.1:4000/$1$is_args$args;
     }
-
-    location ~ ^/__monit__/(.*)$ {
-        proxy_pass_request_headers on;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $http_host;
-
-        proxy_pass http://monit_web-socket/$1;
-    }
-
-    # location ~ ^/__monit__$ {
-    #     # return 301 https://$host$request_uri/;
-    #     proxy_pass_request_headers on;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_set_header Host $http_host;
-
-    #     proxy_pass http://monit_web-socket/$1;
-    # }
-
-    # location ~ ^/__monit__(/.*)$ {
-    #     proxy_pass_request_headers on;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_set_header Host $http_host;
-
-    #     proxy_pass http://monit_web-socket$1;
-    # }
 }
