--- a/config/nginx/maneyko.conf
+++ b/config/nginx/maneyko.conf
@@ -54,7 +54,7 @@ server {
     index index.php index.html index.htm;
 
     # https://www.keycdn.com/support/nginx-location-directive
-    location ~* (/config|/scripts|/vendor|/private|README*|\.gitignore|/.env*) {
+    location ~* (/config|^/local/$|/scripts|/vendor|/private|README*|\.git*|/.env*) {
         deny all;
         return 404;
         # return 301 https://www.maneyko.com;
