add setup script for DigitalOcean

--- a/config/nginx/snippets/ssl.conf
+++ b/config/nginx/snippets/ssl.conf
@@ -4,7 +4,8 @@
 
 listen 443 ssl;
 listen [::]:443 ssl;
-ssl_certificate /etc/letsencrypt/live/maneyko.com-0001/fullchain.pem;
-ssl_certificate_key /etc/letsencrypt/live/maneyko.com-0001/privkey.pem;
+ssl_certificate /etc/letsencrypt/live/maneyko.com/fullchain.pem;
+ssl_certificate_key /etc/letsencrypt/live/maneyko.com/privkey.pem;
+# https://raw.githubusercontent.com/certbot/certbot/HEAD/certbot-nginx/certbot_nginx/_internal/tls_configs/options-ssl-nginx.conf
 include /etc/letsencrypt/options-ssl-nginx.conf;
-ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+# ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
