--- a/config/nginx/snippets/ssl.conf
+++ b/config/nginx/snippets/ssl.conf
@@ -4,7 +4,7 @@
 
 listen 443 ssl;
 listen [::]:443 ssl;
-ssl_certificate /etc/letsencrypt/live/maneyko.com-0001/fullchain.pem;
-ssl_certificate_key /etc/letsencrypt/live/maneyko.com-0001/privkey.pem;
+ssl_certificate /etc/letsencrypt/live/maneyko.com/fullchain.pem;
+ssl_certificate_key /etc/letsencrypt/live/maneyko.com/privkey.pem;
 include /etc/letsencrypt/options-ssl-nginx.conf;
-ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+# ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
