modify NGINX log format

--- a/config/nginx/maneyko.conf
+++ b/config/nginx/maneyko.conf
@@ -9,6 +9,25 @@
 
 # limit_req_zone $binary_remote_addr zone=one:10m rate=200r/m;
 
+log_format apm '{'
+    '"@timestamp":"$time_iso8601",'
+    '"client":"$remote_addr",'
+    '"method":"$request_method",'
+    '"request":"$request",'
+    '"request_length":"$request_length",'
+    '"status":"$status",'
+    '"bytes_sent":"$bytes_sent",'
+    '"body_bytes_sent":"$body_bytes_sent",'
+    '"referer":"$http_referer",'
+    '"user_agent":"$http_user_agent",'
+    '"upstream_addr":"$upstream_addr",'
+    '"upstream_status":"$upstream_status",'
+    '"request_time":"$request_time",'
+    '"upstream_response_time":"$upstream_response_time",'
+    '"upstream_connect_time":"$upstream_connect_time",'
+    '"upstream_header_time":"$upstream_header_time"'
+    '}';
+
 server {
     include snippets/arin-only.conf;
     include snippets/ssl.conf;
@@ -23,7 +42,9 @@ server {
 }
 
 server {
-    # limit_req zone=one;
+    listen 80;
+    listen [::]:80;
+    server_name maneyko.com www.maneyko.com;
 
     if ($host = www.maneyko.com) {
         return 301 https://$host$request_uri;
@@ -34,9 +55,6 @@ server {
         return 301 https://$host$request_uri;
     } # managed by Certbot
 
-    listen 80;
-    listen [::]:80;
-    server_name maneyko.com www.maneyko.com;
     return 404; # managed by Certbot
 }
 
@@ -44,12 +62,15 @@ server {
     include snippets/arin-only.conf;
     include snippets/ssl.conf;
 
+    log_subrequest on;
+    access_log /var/log/nginx/maneyko.com.log apm;
+
     # limit_req zone=one;
 
     # server_name ~^(?<subdomain>[^.]+_).maneyko.com maneyko.com www.maneyko.com;
     server_name maneyko.com www.maneyko.com;
 
-    root /var/www/html;
+    root /var/www/maneyko.com;
 
     index index.php index.html index.htm;
 
