--- a/config/nginx/snippets/ssl.conf
+++ b/config/nginx/snippets/ssl.conf
@@ -4,6 +4,7 @@
 
 listen 443 ssl;
 listen [::]:443 ssl;
+ssl_protocols TLSv1.3;
 ssl_certificate /etc/letsencrypt/live/maneyko.com/fullchain.pem;
 ssl_certificate_key /etc/letsencrypt/live/maneyko.com/privkey.pem;
 # https://raw.githubusercontent.com/certbot/certbot/HEAD/certbot-nginx/certbot_nginx/_internal/tls_configs/options-ssl-nginx.conf
