modify NGINX logging

--- a/config/nginx/maneyko.conf
+++ b/config/nginx/maneyko.conf
@@ -11,15 +11,21 @@
 
 log_format apm '{'
     '"@timestamp":"$time_iso8601",'
+    '"@time_ms":"$msec",'
+    '"scheme":"$scheme",'
     '"client":"$remote_addr",'
     '"method":"$request_method",'
+    '"http_host":"$http_host",'
     '"request":"$request",'
     '"request_length":"$request_length",'
+    '"args":"$args",'
+    '"user_agent":"$http_user_agent",'
+    '"referer":"$http_referer",'
     '"status":"$status",'
     '"bytes_sent":"$bytes_sent",'
     '"body_bytes_sent":"$body_bytes_sent",'
-    '"referer":"$http_referer",'
-    '"user_agent":"$http_user_agent",'
+    '"server_name":"$server_name",'
+    '"server_port":"$server_port",'
     '"upstream_addr":"$upstream_addr",'
     '"upstream_status":"$upstream_status",'
     '"request_time":"$request_time",'
@@ -85,6 +91,8 @@ server {
         try_files $uri $uri/ =404;
         default_type text/plain;
     }
+
+    include snippets/maneyko.local.conf;
 
     location ~ \.php$ {
         include snippets/fastcgi-php.conf;
